LINVAST.Imperative/Builders/Go/ANTLR/GoParser.cs
#nullable disable
namespace LINVAST.Imperative.Builders.Go {

//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

    using System;
    using System.IO;
    using System.Text;
    using System.Diagnostics;
    using System.Collections.Generic;
    using Antlr4.Runtime;
    using Antlr4.Runtime.Atn;
    using Antlr4.Runtime.Misc;
    using Antlr4.Runtime.Tree;
    using DFA = Antlr4.Runtime.Dfa.DFA;

    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
    [System.CLSCompliant(false)]
    public partial class GoParser : GoParserBase {
        protected static DFA[] decisionToDFA;
        protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
        public const int
            BREAK=1, DEFAULT=2, FUNC=3, INTERFACE=4, SELECT=5, CASE=6, DEFER=7, GO=8, 
            MAP=9, STRUCT=10, CHAN=11, ELSE=12, GOTO=13, PACKAGE=14, SWITCH=15, CONST=16, 
            FALLTHROUGH=17, IF=18, RANGE=19, TYPE=20, CONTINUE=21, FOR=22, IMPORT=23, 
            RETURN=24, VAR=25, NIL_LIT=26, IDENTIFIER=27, L_PAREN=28, R_PAREN=29, 
            L_CURLY=30, R_CURLY=31, L_BRACKET=32, R_BRACKET=33, ASSIGN=34, COMMA=35, 
            SEMI=36, COLON=37, DOT=38, PLUS_PLUS=39, MINUS_MINUS=40, DECLARE_ASSIGN=41, 
            ELLIPSIS=42, LOGICAL_OR=43, LOGICAL_AND=44, EQUALS=45, NOT_EQUALS=46, 
            LESS=47, LESS_OR_EQUALS=48, GREATER=49, GREATER_OR_EQUALS=50, OR=51, DIV=52, 
            MOD=53, LSHIFT=54, RSHIFT=55, BIT_CLEAR=56, EXCLAMATION=57, PLUS=58, MINUS=59, 
            CARET=60, STAR=61, AMPERSAND=62, RECEIVE=63, DECIMAL_LIT=64, BINARY_LIT=65, 
            OCTAL_LIT=66, HEX_LIT=67, FLOAT_LIT=68, DECIMAL_FLOAT_LIT=69, HEX_FLOAT_LIT=70, 
            IMAGINARY_LIT=71, RUNE_LIT=72, BYTE_VALUE=73, OCTAL_BYTE_VALUE=74, HEX_BYTE_VALUE=75, 
            LITTLE_U_VALUE=76, BIG_U_VALUE=77, RAW_STRING_LIT=78, INTERPRETED_STRING_LIT=79, 
            WS=80, COMMENT=81, TERMINATOR=82, LINE_COMMENT=83, WS_NLSEMI=84, COMMENT_NLSEMI=85, 
            LINE_COMMENT_NLSEMI=86, EOS=87, OTHER=88;
        public const int
            RULE_sourceFile = 0, RULE_packageClause = 1, RULE_importDecl = 2, RULE_importSpec = 3, 
            RULE_importPath = 4, RULE_declaration = 5, RULE_constDecl = 6, RULE_constSpec = 7, 
            RULE_identifierList = 8, RULE_expressionList = 9, RULE_typeDecl = 10, 
            RULE_typeSpec = 11, RULE_functionDecl = 12, RULE_methodDecl = 13, RULE_receiver = 14, 
            RULE_varDecl = 15, RULE_varSpec = 16, RULE_block = 17, RULE_statementList = 18, 
            RULE_statement = 19, RULE_simpleStmt = 20, RULE_expressionStmt = 21, RULE_sendStmt = 22, 
            RULE_incDecStmt = 23, RULE_assignment = 24, RULE_assign_op = 25, RULE_shortVarDecl = 26, 
            RULE_emptyStmt = 27, RULE_labeledStmt = 28, RULE_returnStmt = 29, RULE_breakStmt = 30, 
            RULE_continueStmt = 31, RULE_gotoStmt = 32, RULE_fallthroughStmt = 33, 
            RULE_deferStmt = 34, RULE_ifStmt = 35, RULE_switchStmt = 36, RULE_exprSwitchStmt = 37, 
            RULE_exprCaseClause = 38, RULE_exprSwitchCase = 39, RULE_typeSwitchStmt = 40, 
            RULE_typeSwitchGuard = 41, RULE_typeCaseClause = 42, RULE_typeSwitchCase = 43, 
            RULE_typeList = 44, RULE_selectStmt = 45, RULE_commClause = 46, RULE_commCase = 47, 
            RULE_recvStmt = 48, RULE_forStmt = 49, RULE_forClause = 50, RULE_rangeClause = 51, 
            RULE_goStmt = 52, RULE_type_ = 53, RULE_typeName = 54, RULE_typeLit = 55, 
            RULE_arrayType = 56, RULE_arrayLength = 57, RULE_elementType = 58, RULE_pointerType = 59, 
            RULE_interfaceType = 60, RULE_sliceType = 61, RULE_mapType = 62, RULE_channelType = 63, 
            RULE_methodSpec = 64, RULE_functionType = 65, RULE_signature = 66, RULE_result = 67, 
            RULE_parameters = 68, RULE_parameterDecl = 69, RULE_expression = 70, RULE_primaryExpr = 71, 
            RULE_conversion = 72, RULE_nonNamedType = 73, RULE_operand = 74, RULE_literal = 75, 
            RULE_basicLit = 76, RULE_integer = 77, RULE_operandName = 78, RULE_qualifiedIdent = 79, 
            RULE_compositeLit = 80, RULE_literalType = 81, RULE_literalValue = 82, 
            RULE_elementList = 83, RULE_keyedElement = 84, RULE_key = 85, RULE_element = 86, 
            RULE_structType = 87, RULE_fieldDecl = 88, RULE_string_ = 89, RULE_embeddedField = 90, 
            RULE_functionLit = 91, RULE_index = 92, RULE_slice_ = 93, RULE_typeAssertion = 94, 
            RULE_arguments = 95, RULE_methodExpr = 96, RULE_receiverType = 97, RULE_eos = 98;
        public static readonly string[] ruleNames = {
            "sourceFile", "packageClause", "importDecl", "importSpec", "importPath", 
            "declaration", "constDecl", "constSpec", "identifierList", "expressionList", 
            "typeDecl", "typeSpec", "functionDecl", "methodDecl", "receiver", "varDecl", 
            "varSpec", "block", "statementList", "statement", "simpleStmt", "expressionStmt", 
            "sendStmt", "incDecStmt", "assignment", "assign_op", "shortVarDecl", "emptyStmt", 
            "labeledStmt", "returnStmt", "breakStmt", "continueStmt", "gotoStmt", 
            "fallthroughStmt", "deferStmt", "ifStmt", "switchStmt", "exprSwitchStmt", 
            "exprCaseClause", "exprSwitchCase", "typeSwitchStmt", "typeSwitchGuard", 
            "typeCaseClause", "typeSwitchCase", "typeList", "selectStmt", "commClause", 
            "commCase", "recvStmt", "forStmt", "forClause", "rangeClause", "goStmt", 
            "type_", "typeName", "typeLit", "arrayType", "arrayLength", "elementType", 
            "pointerType", "interfaceType", "sliceType", "mapType", "channelType", 
            "methodSpec", "functionType", "signature", "result", "parameters", "parameterDecl", 
            "expression", "primaryExpr", "conversion", "nonNamedType", "operand", 
            "literal", "basicLit", "integer", "operandName", "qualifiedIdent", "compositeLit", 
            "literalType", "literalValue", "elementList", "keyedElement", "key", "element", 
            "structType", "fieldDecl", "string_", "embeddedField", "functionLit", 
            "index", "slice_", "typeAssertion", "arguments", "methodExpr", "receiverType", 
            "eos"
        };

        private static readonly string[] _LiteralNames = {
            null, "'break'", "'default'", "'func'", "'interface'", "'select'", "'case'", 
            "'defer'", "'go'", "'map'", "'struct'", "'chan'", "'else'", "'goto'", 
            "'package'", "'switch'", "'const'", "'fallthrough'", "'if'", "'range'", 
            "'type'", "'continue'", "'for'", "'import'", "'return'", "'var'", "'nil'", 
            null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "','", "';'", "':'", 
            "'.'", "'++'", "'--'", "':='", "'...'", "'||'", "'&&'", "'=='", "'!='", 
            "'<'", "'<='", "'>'", "'>='", "'|'", "'/'", "'%'", "'<<'", "'>>'", "'&^'", 
            "'!'", "'+'", "'-'", "'^'", "'*'", "'&'", "'<-'"
        };
        private static readonly string[] _SymbolicNames = {
            null, "BREAK", "DEFAULT", "FUNC", "INTERFACE", "SELECT", "CASE", "DEFER", 
            "GO", "MAP", "STRUCT", "CHAN", "ELSE", "GOTO", "PACKAGE", "SWITCH", "CONST", 
            "FALLTHROUGH", "IF", "RANGE", "TYPE", "CONTINUE", "FOR", "IMPORT", "RETURN", 
            "VAR", "NIL_LIT", "IDENTIFIER", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", 
            "L_BRACKET", "R_BRACKET", "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", "PLUS_PLUS", 
            "MINUS_MINUS", "DECLARE_ASSIGN", "ELLIPSIS", "LOGICAL_OR", "LOGICAL_AND", 
            "EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS", 
            "OR", "DIV", "MOD", "LSHIFT", "RSHIFT", "BIT_CLEAR", "EXCLAMATION", "PLUS", 
            "MINUS", "CARET", "STAR", "AMPERSAND", "RECEIVE", "DECIMAL_LIT", "BINARY_LIT", 
            "OCTAL_LIT", "HEX_LIT", "FLOAT_LIT", "DECIMAL_FLOAT_LIT", "HEX_FLOAT_LIT", 
            "IMAGINARY_LIT", "RUNE_LIT", "BYTE_VALUE", "OCTAL_BYTE_VALUE", "HEX_BYTE_VALUE", 
            "LITTLE_U_VALUE", "BIG_U_VALUE", "RAW_STRING_LIT", "INTERPRETED_STRING_LIT", 
            "WS", "COMMENT", "TERMINATOR", "LINE_COMMENT", "WS_NLSEMI", "COMMENT_NLSEMI", 
            "LINE_COMMENT_NLSEMI", "EOS", "OTHER"
        };
        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary
        {
            get
            {
                return DefaultVocabulary;
            }
        }

        public override string GrammarFileName { get { return "GoParser.g4"; } }

        public override string[] RuleNames { get { return ruleNames; } }

        public override string SerializedAtn { get { return new string(_serializedATN); } }

        static GoParser() {
            decisionToDFA = new DFA[_ATN.NumberOfDecisions];
            for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
                decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
            }
        }

        public GoParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

        public GoParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
            : base(input, output, errorOutput)
        {
            Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
        }

        public partial class SourceFileContext : ParserRuleContext {
            [System.Diagnostics.DebuggerNonUserCode] public PackageClauseContext packageClause() {
                return GetRuleContext<PackageClauseContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode] public EosContext[] eos() {
                return GetRuleContexts<EosContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public EosContext eos(int i) {
                return GetRuleContext<EosContext>(i);
            }
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GoParser.Eof, 0); }
            [System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext[] importDecl() {
                return GetRuleContexts<ImportDeclContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext importDecl(int i) {
                return GetRuleContext<ImportDeclContext>(i);
            }
            [System.Diagnostics.DebuggerNonUserCode] public FunctionDeclContext[] functionDecl() {
                return GetRuleContexts<FunctionDeclContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public FunctionDeclContext functionDecl(int i) {
                return GetRuleContext<FunctionDeclContext>(i);
            }
            [System.Diagnostics.DebuggerNonUserCode] public MethodDeclContext[] methodDecl() {
                return GetRuleContexts<MethodDeclContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public MethodDeclContext methodDecl(int i) {
                return GetRuleContext<MethodDeclContext>(i);
            }
            [System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
                return GetRuleContexts<DeclarationContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
                return GetRuleContext<DeclarationContext>(i);
            }
            public SourceFileContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_sourceFile; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.EnterSourceFile(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.ExitSourceFile(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IGoParserVisitor<TResult> typedVisitor = visitor as IGoParserVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSourceFile(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SourceFileContext sourceFile() {
            SourceFileContext _localctx = new SourceFileContext(Context, State);
            EnterRule(_localctx, 0, RULE_sourceFile);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 198;
                    packageClause();
                    State = 199;
                    eos();
                    State = 205;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while (_la==IMPORT) {
                        {
                            {
                                State = 200;
                                importDecl();
                                State = 201;
                                eos();
                            }
                        }
                        State = 207;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                    State = 217;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNC) | (1L << CONST) | (1L << TYPE) | (1L << VAR))) != 0)) {
                        {
                            {
                                State = 211;
                                ErrorHandler.Sync(this);
                                switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
                                    case 1:
                                    {
                                        State = 208;
                                        functionDecl();
                                    }
                                        break;
                                    case 2:
                                    {
                                        State = 209;
                                        methodDecl();
                                    }
                                        break;
                                    case 3:
                                    {
                                        State = 210;
                                        declaration();
                                    }
                                        break;
                                }
                                State = 213;
                                eos();
                            }
                        }
                        State = 219;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                    State = 220;
                    Match(Eof);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class PackageClauseContext : ParserRuleContext {
            public IToken packageName;
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACKAGE() { return GetToken(GoParser.PACKAGE, 0); }
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GoParser.IDENTIFIER, 0); }
            public PackageClauseContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_packageClause; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.EnterPackageClause(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.ExitPackageClause(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IGoParserVisitor<TResult> typedVisitor = visitor as IGoParserVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitPackageClause(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public PackageClauseContext packageClause() {
            PackageClauseContext _localctx = new PackageClauseContext(Context, State);
            EnterRule(_localctx, 2, RULE_packageClause);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 222;
                    Match(PACKAGE);
                    State = 223;
                    _localctx.packageName = Match(IDENTIFIER);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ImportDeclContext : ParserRuleContext {
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT() { return GetToken(GoParser.IMPORT, 0); }
            [System.Diagnostics.DebuggerNonUserCode] public ImportSpecContext[] importSpec() {
                return GetRuleContexts<ImportSpecContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public ImportSpecContext importSpec(int i) {
                return GetRuleContext<ImportSpecContext>(i);
            }
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_PAREN() { return GetToken(GoParser.L_PAREN, 0); }
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_PAREN() { return GetToken(GoParser.R_PAREN, 0); }
            [System.Diagnostics.DebuggerNonUserCode] public EosContext[] eos() {
                return GetRuleContexts<EosContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode] public EosContext eos(int i) {
                return GetRuleContext<EosContext>(i);
            }
            public ImportDeclContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_importDecl; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.EnterImportDecl(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.ExitImportDecl(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IGoParserVisitor<TResult> typedVisitor = visitor as IGoParserVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitImportDecl(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ImportDeclContext importDecl() {
            ImportDeclContext _localctx = new ImportDeclContext(Context, State);
            EnterRule(_localctx, 4, RULE_importDecl);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 225;
                    Match(IMPORT);
                    State = 237;
                    ErrorHandler.Sync(this);
                    switch (TokenStream.LA(1)) {
                        case IDENTIFIER:
                        case DOT:
                        case RAW_STRING_LIT:
                        case INTERPRETED_STRING_LIT:
                        {
                            State = 226;
                            importSpec();
                        }
                            break;
                        case L_PAREN:
                        {
                            State = 227;
                            Match(L_PAREN);
                            State = 233;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            while (((((_la - 27)) & ~0x3f) == 0 && ((1L << (_la - 27)) & ((1L << (IDENTIFIER - 27)) | (1L << (DOT - 27)) | (1L << (RAW_STRING_LIT - 27)) | (1L << (INTERPRETED_STRING_LIT - 27)))) != 0)) {
                                {
                                    {
                                        State = 228;
                                        importSpec();
                                        State = 229;
                                        eos();
                                    }
                                }
                                State = 235;
                                ErrorHandler.Sync(this);
                                _la = TokenStream.LA(1);
                            }
                            State = 236;
                            Match(R_PAREN);
                        }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ImportSpecContext : ParserRuleContext {
            public IToken alias;
            [System.Diagnostics.DebuggerNonUserCode] public ImportPathContext importPath() {
                return GetRuleContext<ImportPathContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(GoParser.DOT, 0); }
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GoParser.IDENTIFIER, 0); }
            public ImportSpecContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_importSpec; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.EnterImportSpec(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener) {
                IGoParserListener typedListener = listener as IGoParserListener;
                if (typedListener != null) typedListener.ExitImportSpec(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IGoParserVisitor<TResult> typedVisitor = visitor as IGoParserVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitImportSpec(this);
                else return visitor.VisitChildren(this);
            }
        }
